[huangyunjie] feat: complete intex.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <title>Title</title>
 </head>
 <body>
-  Hello World
+  <header class="header">
+    <span class="logo">Twitter</span>
+    <div class="nav-button">
+      <button class="nav-button__login">登录</button>
+      <button class="nav-button__register">注册</button>
+    </div>
+  </header>
+  <main class="container">
+    <form class="loginbar">
+      <span class="loginbar__title">查看世界上正在发生的事情</span>
+      <input type="text" class="user-name" placeholder="电话、邮件地址或用户名">
+      <input type="text" class="password" placeholder="mima">
+      <a href="" class="forget-passwor">忘记密码</a>
+      <button class="loginbar__sign">登录</button>
+      <span class="or">或</span>
+      <button class="loginbar__register">注册</button>
+    </form>
+
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
