[huangyunjie] feat:complete header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <input type="text" class="user-name" placeholder="电话、邮件地址或用户名">
       <input type="text" class="password" placeholder="mima">
       <a href="" class="forget-passwor">忘记密码</a>
-      <button class="loginbar__sign">登录</button>
+      <button class="loginbar__login">登录</button>
       <span class="or">或</span>
       <button class="loginbar__register">注册</button>
     </form>
