[huangyunjie] feat:complete main

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <main class="container">
     <form class="loginbar">
       <span class="loginbar__title">查看世界上正在发生的事情</span>
-      <input type="text" class="user-name" placeholder="电话、邮件地址或用户名">
-      <input type="text" class="password" placeholder="mima">
-      <a href="" class="forget-passwor">忘记密码</a>
+      <input type="text" class="loginbar__user-name" placeholder="电话、邮件地址或用户名">
+      <input type="text" class="loginbar__password" placeholder="密码">
+      <a href="" class="loginbar__forget-passwor">忘记密码?</a>
       <button class="loginbar__login">登录</button>
-      <span class="or">或</span>
+      <span class="loginbar__or">或</span>
       <button class="loginbar__register">注册</button>
     </form>
 
