[mengqiu] add TODO feedback

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
   <main class="container">
     <form class="loginbar">
       <span class="loginbar__title">查看世界上正在发生的事情</span>
+      <!--      TODO feedback: 语义化标签使用不正确：placeholder里面的内容应该放入<label>标签-->
+      <!--      TODO feedback: css class的命名，如果需要多个单词，要使用a-b这种格式, 后面的代码同理-->
+      <!--      TODO feedback: 这里命名太复杂了，叫username就好啦-->
       <input type="text" class="loginbar__user-name" placeholder="电话、邮件地址或用户名">
+      <!--      TODO feedback: 这里命名太复杂了，叫password就好啦-->
       <input type="text" class="loginbar__password" placeholder="密码">
+      <!--      TODO feedback: 这里命名太复杂了，叫forget-password就好啦-->
       <a href="" class="loginbar__forget-passwor">忘记密码?</a>
       <button class="loginbar__login">登录</button>
       <span class="loginbar__or">或</span>
